#changelog changed stuff

--- a/build.gradle
+++ b/build.gradle
@@ -43,11 +43,11 @@ minecraft {
     version = config.minecraft_version + "-" + config.forge_version
 
     replaceIn "util/REFERENCE.java"
-    replace "@VERSION@", "${System.getenv("VERSION")}.${System.getenv("DRONE_BUILD_NUMBER") ?: 0}"
+    replace "@VERSION@", "${System.getenv("MODVERSION")}.${System.getenv("DRONE_BUILD_NUMBER") ?: 0}"
     replace "@MVERSION@", "${config.minecraft_version}"
 }
 
-version = "${config.minecraft_version}-${System.getenv("VERSION")}.${System.getenv("DRONE_BUILD_NUMBER") ?: 0}"
+version = "${config.minecraft_version}-${System.getenv("MODVERSION")}.${System.getenv("DRONE_BUILD_NUMBER") ?: 0}"
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.11'
