Hopefully make the coremod work in non dev environment

--- a/build.gradle
+++ b/build.gradle
@@ -71,6 +71,13 @@ processResources {
     }
 }
 
+jar {
+        manifest {
+        attributes 'FMLCorePlugin': 'de.teamlapen.vampirism.coremod.VampirismFMLLoadingPlugin',
+                        'FMLCorePluginContainsFMLMod': 'true'
+    }
+}
+
 task devJar(type: Jar, dependsOn: 'classes') {
     from(sourceSets.main.output) {
         include '**'
