--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ configFile.withReader {
     project.ext.config = new ConfigSlurper().parse prop
 }
 
-version = System.getenv("MODVERSION")
+version = config.mod_version
 group = "de.teamlapen.vampirism"
 archiveBaseName= "VampirismMod"
 
@@ -43,11 +43,11 @@ minecraft {
     version = config.minecraft_version + "-" + config.forge_version
 
     replaceIn "util/REFERENCE.java"
-    replace "@VERSION@", "${System.getenv("MODVERSION")}.${System.getenv("DRONE_BUILD_NUMBER") ?: 0}"
+    replace "@VERSION@", "${config.mod_version}"
     replace "@MVERSION@", "${config.minecraft_version}"
 }
 
-version = "${config.minecraft_version}-${System.getenv("MODVERSION")}.${System.getenv("DRONE_BUILD_NUMBER") ?: 0}"
+version = "${config.minecraft_version}-${config.mod_version}"
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.11'
