--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,23 @@ buildscript {
     }
 }
 
+apply plugin: "eclipse"
 apply plugin: "forge"
+apply plugin: "maven"
 
+repositories {
+    maven { // The repo from which to get waila
+        name "Mobius Repo"
+        url "http://mobiusstrip.eu/maven"
+    }
+}
+
+dependencies {
+    compile('mcp.mobius.waila:Waila:1.5.11-RC2-NONEI_1.7.10') {
+        exclude group: 'mcp.mobius.waila'
+    }
+ }
+ 
 loadProperties()
 
 version=project.mod_version
