--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
 #29.07.14 17:00
 minecraft_version = 1.7.10
-forge_version = 10.13.2.1291
+forge_version = 10.13.4.1448-1.7.10
 mod_version = LocalTest
