Castle position generation almost finished

--- a/src/main/resources/VillageBiomesDefault.cfg
+++ b/src/main/resources/VillageBiomesDefault.cfg
@@ -88,3 +88,5 @@
 ~planks,red_mushroom_block:0,b:MushroomIsland
 ~log,red_mushroom_block:14,b:MushroomIsland
 ~cobblestone,red_mushroom_block:15,b:MushroomIsland
+
+-b:vampireForest
