--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,8 @@
 #29.07.14 17:00
 minecraft_version = 1.7.10
 forge_version = 10.13.4.1448-1.7.10
-mod_version = LocalTest
 guide_api_version = 1.0.1-20
 waila_version = 1.5.11-RC2-NONEI_1.7.10
+
+main_version = 0
+major_version = 7
