Ignore Thumbs.db files

--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -32,4 +32,6 @@ processResources {
     from(sourceSets.main.resources.srcDirs) {
         exclude '**/*.info'
     }
+
+    exclude '**/Thumbs.db'
 }
