--- a/gradle/versioning.gradle
+++ b/gradle/versioning.gradle
@@ -10,13 +10,13 @@ def versions = tag.tokenize('.')
 minor= (versions[2]).toInteger()+1
 project.mod_version="v${config.main_version}.${config.major_version}.${minor}"
 if(!System.getenv().RELEASE&&System.getenv().CI){
-    project.mod_version=project.mod_version+"-Alpha"+System.getenv().DRONE_BUILD_NUMBER
+    project.mod_version=project.mod_version+".Alpha"+System.getenv().DRONE_BUILD_NUMBER
 }
 if(!System.getenv().CI){
-    project.mod_version=project.mod_version+"-TEST"
+    project.mod_version=project.mod_version+".TEST"
 }
 else{
-    writeVersion(project.mod_version)
+    writeVersion()
 }
 
 
@@ -30,8 +30,8 @@ def getLatestTag(){
     return stdout.toString().trim()
 }
 
-def writeVersion(String ver){
+def writeVersion(){
     exec {
-        commandLine 'export',"VAMP_VERSION=${ver}"
+        commandLine 'export',"VAMP_VERSION=${project.mod_version}"
     }
 }
