Fixed several issues #build

--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -35,3 +35,10 @@ processResources {
 
     exclude '**/Thumbs.db'
 }
+
+jar {
+    manifest {
+        attributes 'FMLCorePlugin': 'de.teamlapen.vampirism.coremod.VampirismFMLLoadingPlugin',
+                'FMLCorePluginContainsFMLMod': 'true'
+    }
+}
