--- a/gradle/versioning.gradle
+++ b/gradle/versioning.gradle
@@ -1,5 +1,5 @@
 def minor = 0
-def tag = "v0.0.-1"
+def tag = "0.0.-1"
 try {
     tag = getLatestTag()
 }
@@ -8,7 +8,7 @@ catch (Exception e){
 }
 def versions = tag.tokenize('.')
 minor= (versions[2]).toInteger()+1
-project.mod_version="v${config.main_version}.${config.major_version}.${minor}"
+project.mod_version = "${config.main_version}.${config.major_version}.${minor}"
 if(!System.getenv().RELEASE&&System.getenv().CI){
     project.mod_version=project.mod_version+".Alpha"+System.getenv().DRONE_BUILD_NUMBER
 }
