--- a/src/main/resources/assets/vampirism/building_tiles/treasure.json
+++ b/src/main/resources/assets/vampirism/building_tiles/treasure.json
@@ -10327,7 +10327,7 @@
   ],
   "extras": [
     {
-      "type": 2,
+      "type": "CHEST",
       "pos": {
         "x": 8,
         "y": -7,
@@ -10369,7 +10369,7 @@
       }
     },
     {
-      "type": 2,
+      "type": "CHEST",
       "pos": {
         "x": 8,
         "y": -7,
@@ -10393,7 +10393,7 @@
       }
     },
     {
-      "type": 1,
+      "type": "COFFIN",
       "pos": {
         "x": 9,
         "y": -7,
@@ -10405,7 +10405,7 @@
       }
     },
     {
-      "type": 1,
+      "type": "COFFIN",
       "pos": {
         "x": 10,
         "y": -7,
@@ -10417,7 +10417,7 @@
       }
     },
     {
-      "type": 2,
+      "type": "CHEST",
       "pos": {
         "x": 11,
         "y": -7,
@@ -10459,7 +10459,7 @@
       }
     },
     {
-      "type": 2,
+      "type": "CHEST",
       "pos": {
         "x": 11,
         "y": -7,
