--- a/gradle/versioning.gradle
+++ b/gradle/versioning.gradle
@@ -4,6 +4,7 @@ try {
     tag = getLatestTag()
 }
 catch (Exception e){
+    e.printStackTrace()
     logger.lifecycle "Failed to find the latest tag. Probably there is none."
 }
 def versions = tag.tokenize('.')
