--- a/gradle/versioning.gradle
+++ b/gradle/versioning.gradle
@@ -26,7 +26,7 @@ logger.lifecycle 'git', 'describe', '--tags', '--abbrev=0', "--match", "\"v${con
 def getLatestTag(){
     def stdout = new ByteArrayOutputStream()
     exec {
-        commandLine 'git', 'describe', '--tags', '--abbrev=0', '--match', '"v0.7*"', 'origin/master'
+        commandLine 'git', 'describe', '--tags', '--abbrev=0', '--match', '"v0.7*"', 'HEAD'
         //commandLine 'git','describe','--tags','--abbrev=0', "--match", "\"v${config.main_version}.${config.major_version}*\""
         standardOutput = stdout
     }
