--- a/gradle/versioning.gradle
+++ b/gradle/versioning.gradle
@@ -26,6 +26,12 @@ logger.lifecycle 'git', 'describe', '--tags', '--abbrev=0', "--match", "\"v${con
 def getLatestTag(){
     def stdout = new ByteArrayOutputStream()
     exec {
+        commandLine 'git', 'describe', '--tags', '--abbrev=0'
+    }
+    exec {
+        commandLine 'git', 'describe', '--tags', '--abbrev=0', "--match", "'*'"
+    }
+    exec {
         commandLine 'git', 'describe', '--tags', '--abbrev=0', "--match", "'v0.7*'"
         //commandLine 'git','describe','--tags','--abbrev=0', "--match", "\"v${config.main_version}.${config.major_version}*\""
         standardOutput = stdout
