--- a/gradle/versioning.gradle
+++ b/gradle/versioning.gradle
@@ -22,13 +22,11 @@ else{
 version=project.mod_version
 
 logger.lifecycle "Version "+project.mod_version
-logger.lifecycle 'git', 'describe', '--tags', '--abbrev=0', "--match", "\"v${config.main_version}.${config.major_version}*\""
 def getLatestTag(){
     def stdout = new ByteArrayOutputStream()
 
     exec {
-        commandLine 'git', 'describe', '--tags', '--abbrev=0', "--match=v0.7*"
-        //commandLine 'git','describe','--tags','--abbrev=0', "--match", "\"v${config.main_version}.${config.major_version}*\""
+        commandLine 'git', 'describe', '--tags', '--abbrev=0', "--match=v${config.main_version}.${config.major_version}*"
         standardOutput = stdout
     }
     return stdout.toString().trim()
