Updated translations, naming and hunter spawnrate #release

--- a/gradle/versioning.gradle
+++ b/gradle/versioning.gradle
@@ -19,7 +19,7 @@ if(!System.getenv().CI){
 else{
     writeVersion()
 }
-version=project.mod_version
+version = config.minecraft_version + "-" + project.mod_version
 
 logger.lifecycle "Version "+project.mod_version
 def getLatestTag(){
