--- a/build.properties
+++ b/build.properties
@@ -3,6 +3,7 @@ minecraft_version = 1.8
 forge_version = 11.14.3.1450
 guide_api_version = 1.0.0-21
 waila_version = 1.6.0_B1_1.8.1
+chicken_core_version=1.0.5.36
 
 main_version = 0
 major_version = 8
