--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -4,13 +4,15 @@ repositories {
         url "http://mobiusstrip.eu/maven"
     }
     maven { url 'http://tehnut.info/maven/' }
+    maven { url 'http://chickenbones.net/maven'}
     mavenCentral()
 }
 
 dependencies {
-    compile('mcp.mobius.waila:Waila:'+config.waila_version)
+    compile('mcp.mobius.waila:Waila:'+config.waila_version+":dev")
     compile "info.amerifrance.guideapi:Guide-API:"+config.minecraft_version+"-"+config.guide_api_version+":deobf"
     compile group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.annotation', version: '1.1.0'
+    //runtime "codechicken:CodeChickenCore:"+config.minecraft_version+"-"+config.chicken_core_version+":dev"
 }
 
 minecraft {
