--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ Thumbs.db
 *.bak
 Vampirism.iml
 .settings
+.settings/*
+org.eclipse.jdt.core.prefs
 
 #Minecraft run files. Incase someone configured it wrong or differently
 config/
