Changed to Minecraft 1.8.9 Updated mappings Implemented IInitListener (not sure yet, if it will stay like this)

--- a/gradle/deploy.gradle
+++ b/gradle/deploy.gradle
@@ -1,5 +1,3 @@
-apply plugin: "com.matthewprenger.cursegradle"
-
 curseforge {
     if(project.hasProperty("curseforge_key")) {
         apiKey = project.curseforge_key
@@ -30,7 +28,7 @@ curseforge {
         }
 
 
-        addArtifact devJar
+        addArtifact deobfJar
     }
 
 
