--- a/gradle/dev.gradle
+++ b/gradle/dev.gradle
@@ -1,12 +1,9 @@
-task devJar(type: Jar, dependsOn: 'classes') {
-    from(sourceSets.main.output) {
-        include '**'
-    }
-
+task deobfJar(type: Jar, dependsOn: 'classes') {
+    from(sourceSets.main.output)
     extension = 'jar'
     classifier = 'dev'
 }
 
 artifacts {
-    archives devJar
+    archives deobfJar
 }
