--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,28 @@
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
         maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.0-SNAPSHOT'
-        classpath "gradle.plugin.com.matthewprenger:CurseGradle:1.0.4"
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
     }
 }
 
+plugins {
+    id 'com.matthewprenger.cursegradle' version '1.0.5'
+}
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 loadProperties()
 
 group = "de.teamlapen.vampirism"
 archivesBaseName= "Vampirism"
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 def loadProperties(){
     ext.configFile = file "build.properties"
@@ -41,11 +39,3 @@ apply from: 'gradle/versioning.gradle'
 apply from: 'gradle/forge.gradle'
 apply from: 'gradle/dev.gradle'
 apply from: 'gradle/deploy.gradle'
-
-sourceSets
-{
-            main
-                    {
-                        java { srcDirs = ["$projectDir/src/main/java"] }		resources { srcDirs = ["$projectDir/src/main/resources"] }
-                    }
-}
