--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -9,15 +9,16 @@ repositories {
 }
 
 dependencies {
-    compile('mcp.mobius.waila:Waila:'+config.waila_version+":dev")
-    compile "info.amerifrance.guideapi:Guide-API:"+config.minecraft_version+"-"+config.guide_api_version+":deobf"
-    compile group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.annotation', version: '1.1.0'
+    //compile('mcp.mobius.waila:Waila:'+config.waila_version+":dev")
+    //compile "info.amerifrance.guideapi:Guide-API:"+config.minecraft_version+"-"+config.guide_api_version+":deobf"
+    //compile group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.annotation', version: '1.1.0'
     //runtime "codechicken:CodeChickenCore:"+config.minecraft_version+"-"+config.chicken_core_version+":dev"
 }
 
 minecraft {
     version = config.minecraft_version + "-" + config.forge_version
-	mappings = "snapshot_20141130"
+    mappings = "stable_20"
+    runDir = "run"
     replaceIn "util/REFERENCE.java"
     replace "@VERSION@", "${project.mod_version}"
     replace "@MVERSION@", "${config.minecraft_version}"
@@ -25,6 +26,10 @@ minecraft {
 }
 
 processResources {
+    // this will ensure that this task is redone when the versions change.
+    inputs.property "m_version", project.mod_version
+    inputs.property "mc_version", project.config.minecraft.version
+
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
         include '*.info'
