--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -27,8 +27,8 @@ minecraft {
 
 processResources {
     // this will ensure that this task is redone when the versions change.
-    inputs.property "m_version", project.mod_version
-    inputs.property "mc_version", project.config.minecraft.version
+//    inputs.property "m_version", project.mod_version
+//    inputs.property "mc_version", project.config.minecraft.version
 
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
