--- a/gradle/versioning.gradle
+++ b/gradle/versioning.gradle
@@ -3,26 +3,26 @@ def tag = "0.0.-1"
 try {
     tag = getLatestTag()
 }
-catch (Exception e){
+catch (Exception e) {
     //e.printStackTrace()
     logger.lifecycle "Failed to find the latest tag. Probably there is none."
 }
 def versions = tag.tokenize('.')
-minor= (versions[2]).toInteger()+1
+minor = (versions[2]).toInteger() + 1
 project.mod_version = "${config.main_version}.${config.major_version}.${minor}"
-if(!System.getenv().RELEASE&&System.getenv().CI){
-    project.mod_version=project.mod_version+".Alpha"+System.getenv().DRONE_BUILD_NUMBER
+if (!System.getenv().RELEASE && System.getenv().CI) {
+    project.mod_version = project.mod_version + ".Alpha" + System.getenv().DRONE_BUILD_NUMBER
 }
-if(!System.getenv().CI){
-    project.mod_version=project.mod_version+".TEST-"+getDate()
-}
-else{
+if (!System.getenv().CI) {
+    project.mod_version = project.mod_version + ".TEST-" + getDate()
+} else {
     writeVersion()
 }
 version = config.minecraft_version + "-" + project.mod_version
 
-logger.lifecycle "Version "+project.mod_version
-def getLatestTag(){
+logger.lifecycle "Version " + project.mod_version
+
+def getLatestTag() {
     def stdout = new ByteArrayOutputStream()
 
     exec {
@@ -32,9 +32,9 @@ def getLatestTag(){
     return stdout.toString().trim()
 }
 
-def writeVersion(){
+def writeVersion() {
     def file = new File("version.txt")
-    file.text=project.mod_version
+    file.text = project.mod_version
 }
 
 def getDate() {
