--- a/build.properties
+++ b/build.properties
@@ -6,6 +6,6 @@ forge_version =  11.15.1.1722
 guide_api_version = 1.0.0-21
 waila_version = 1.6.0_B1_1.8.1
 chicken_core_version=1.0.5.36
-
-main_version = 0
-major_version = 9
+main_version=1
+major_version=0
+minor_version=0
