--- a/gradle/versioning.gradle
+++ b/gradle/versioning.gradle
@@ -1,36 +1,19 @@
-def minor = 0
-def tag = "0.0.-1"
-try {
-    tag = getLatestTag()
-}
-catch (Exception e) {
-    //e.printStackTrace()
-    logger.lifecycle "Failed to find the latest tag. Probably there is none."
-}
-def versions = tag.tokenize('.')
-minor = (versions[2]).toInteger() + 1
-project.mod_version = "${config.main_version}.${config.major_version}.${minor}"
-if (!System.getenv().RELEASE && System.getenv().CI) {
-    project.mod_version = project.mod_version + ".Alpha" + System.getenv().DRONE_BUILD_NUMBER
-}
-if (!System.getenv().CI) {
-    project.mod_version = project.mod_version + ".TEST-" + getDate()
-} else {
+project.mod_version = "${config.main_version}.${config.major_version}.${config.minor_version}"
+if (hasProperty("beta")) {
+    project.mod_version = project.mod_version + "-Beta." + beta
+} else if (hasProperty("release")) {
+
+} else if (System.getenv().CI) {
+    project.mod_version = project.mod_version + "-Test+" + System.getenv().GIT_BRANCH + "." + System.getenv().GIT_COMMIT
     writeVersion()
+} else {
+    project.mod_version = project.mod_version + "-Alpha+" + getDate();
 }
+
 version = config.minecraft_version + "-" + project.mod_version
 
 logger.lifecycle "Version " + project.mod_version
 
-def getLatestTag() {
-    def stdout = new ByteArrayOutputStream()
-
-    exec {
-        commandLine 'git', 'describe', '--tags', '--abbrev=0', "--match=v${config.main_version}.${config.major_version}*"
-        standardOutput = stdout
-    }
-    return stdout.toString().trim()
-}
 
 def writeVersion() {
     def file = new File("version.txt")
