--- a/gradle/versioning.gradle
+++ b/gradle/versioning.gradle
@@ -22,6 +22,6 @@ def writeVersion() {
 
 def getDate() {
     def date = new Date()
-    def formattedDate = date.format('yyyy-MM-dd-HH-mm')
+    def formattedDate = date.format('MM-dd-HH-mm')
     return formattedDate
 }
