--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,7 @@
 #29.07.14 17:00
 minecraft_version=1.9
 forge_version=12.16.0.1859-1.9
+mappings=snapshot_20160408
 #Dependencies/Optional Libraries
 #TODO Wait for 1.8.9 versions
 guide_api_version = 1.0.0-21
