--- a/build.properties
+++ b/build.properties
@@ -4,7 +4,8 @@ forge_version=12.16.0.1865-1.9
 mappings=snapshot_20160415
 #snapshot_20160408
 #Dependencies/Optional Libraries
-#TODO Wait for 1.8.9 versions
+jei_version=3.2.10.185
+#TODO Wait for 1.9 versions
 guide_api_version = 1.0.0-21
 waila_version = 1.6.0_B1_1.8.1
 chicken_core_version=1.0.5.36
