--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -5,10 +5,14 @@ repositories {
     }
     maven { url 'http://tehnut.info/maven/' }
     maven { url 'http://chickenbones.net/maven' }
+    maven {
+        url "http://dvs1.progwml6.com/files/maven"
+    }
     mavenCentral()
 }
 
 dependencies {
+    deobfCompile "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version
     //compile('mcp.mobius.waila:Waila:'+config.waila_version+":dev")
     //compile "info.amerifrance.guideapi:Guide-API:"+config.minecraft_version+"-"+config.guide_api_version+":deobf"
     //compile group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.annotation', version: '1.1.0'
@@ -24,6 +28,7 @@ minecraft {
     replace "@MVERSION@", "${config.minecraft_version}"
     replace "@FVERSION@", "${config.forge_version}"
     makeObfSourceJar = false // an Srg named sources jar is made if enabled
+    useDepAts = true
 }
 
 processResources {
