--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 #29.07.14 17:00
 minecraft_version=1.9
-forge_version=12.16.0.1865-1.9
+forge_version=12.16.1.1887
 mappings=snapshot_20160415
 #snapshot_20160408
 #Dependencies/Optional Libraries
