--- a/build.properties
+++ b/build.properties
@@ -5,9 +5,9 @@ mappings=snapshot_20160415
 #snapshot_20160408
 #Dependencies/Optional Libraries
 jei_version=3.2.10.185
+waila_version=1.7.0-B2_1.9
 #TODO Wait for 1.9 versions
 guide_api_version = 1.0.0-21
-waila_version = 1.6.0_B1_1.8.1
 chicken_core_version=1.0.5.36
 main_version=1
 major_version=0
