Actually updated mappings for 1.9.4. Updated to 1.9.4

--- a/build.properties
+++ b/build.properties
@@ -1,11 +1,11 @@
 #29.07.14 17:00
-minecraft_version=1.9
-forge_version=12.16.1.1887
+minecraft_version=1.9.4
+forge_version=12.17.0.1921-1.9.4
 mappings=snapshot_20160518
 #snapshot_20160408
 #Dependencies/Optional Libraries
-jei_version=3.2.10.185
-waila_version=1.7.0-B2_1.9
+jei_version=3.4.0.204
+waila_version=1.7.0-B3_1.9.4
 #TODO Wait for 1.9 versions
 guide_api_version = 1.0.0-21
 chicken_core_version=1.0.5.36
