--- a/build.properties
+++ b/build.properties
@@ -1,14 +1,15 @@
 #29.07.14 17:00
 minecraft_version=1.9.4
-forge_version=12.17.0.1921-1.9.4
+forge_version=12.17.0.1950
 mappings=snapshot_20160518
-#snapshot_20160408
+main_version=1
+major_version=0
+minor_version=0
+
 #Dependencies/Optional Libraries
-jei_version=3.4.0.204
+jei_version=3.4.3.207
 waila_version=1.7.0-B3_1.9.4
 #TODO Wait for 1.9 versions
 guide_api_version = 1.0.0-21
 chicken_core_version=1.0.5.36
-main_version=1
-major_version=0
-minor_version=0
+
