--- a/build.properties
+++ b/build.properties
@@ -1,13 +1,13 @@
 #29.07.14 17:00
-minecraft_version=1.9.4
-forge_version=12.17.0.1976
+minecraft_version=1.10
+forge_version=12.18.0.1992-1.10.0
 mappings=snapshot_20160518
 main_version=1
 major_version=0
 minor_version=0
 
 #Dependencies/Optional Libraries
-jei_version=3.6.7.216
+jei_version=3.7.0.218
 waila_version=1.7.0-B3_1.9.4
 #TODO Wait for 1.9 versions
 guide_api_version = 1.0.0-21
