--- a/gradle/deploy.gradle
+++ b/gradle/deploy.gradle
@@ -1,10 +1,12 @@
 curseforge {
     if (project.hasProperty("curseforge_key")) {
         apiKey = project.curseforge_key
+    } else if (project.hasProperty("CURSEFORGE_API")) {
+        apiKey = project.CURSEFORGE_API; //Not sure if I even used that anywhere
     } else if (System.getenv().CI) {
         apiKey = System.getenv().CURSEFORGE_KEY_SECRET
     } else {
-        apiKey = project.CURSEFORGE_API
+        apiKey = "DUMMY";
     }
     project {
         id = "233029"
