--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 #29.07.14 17:00
 minecraft_version=1.10.2
-forge_version=12.18.1.2050
+forge_version=12.18.1.2073
 mappings=snapshot_20160518
 main_version=1
 major_version=0
@@ -9,6 +9,5 @@ minor_version=0
 #Dependencies/Optional Libraries
 jei_version=3.8.0.240
 waila_version=1.7.0-B3_1.9.4
-#TODO Wait for 1.10 versions
-guide_api_version = 1.0.0-21
+guide_api_version=1.10.2-2.0.2-45
 
