--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -8,6 +8,12 @@ repositories {
     maven {
         url "http://dvs1.progwml6.com/files/maven"
     }
+    maven {
+        //Local repo for custom forge builds.
+        //Is not required to exist
+        name = "LocalForge"
+        url = "../../te/MinecraftForge/repo/"
+    }
     mavenCentral()
 }
 
