Set source target to 1.7

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,6 @@ notifications:
     on_failure: change
   irc:
     channels:
-      - "irc.espernet.com#vampirism"
+      - "irc.espernet.net#vampirism"
     on_success: always
     on_failure: always
