--- a/build.properties
+++ b/build.properties
@@ -1,13 +1,13 @@
 #29.07.14 17:00
-minecraft_version=1.10.2
-forge_version=12.18.3.2185
-mappings=stable_29
+minecraft_version=1.11.2
+forge_version=13.20.0.2228
+mappings=snapshot_20161220
 main_version=1
 major_version=2
 minor_version=0
 
 #Dependencies/Optional Libraries
-jei_version=3.14.7.416
-waila_version=1.7.0-B3_1.9.4
-guide_api_version=1.10.2-2.0.3-46
+jei_version=4.2.10.248
+#waila_version=1.7.0-B3_1.9.4
+guide_api_version=1.11-2.1.0-51
 
