--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -32,7 +32,7 @@ task crowdin(type: CrowdinDownload) {
 dependencies {
     deobfCompile "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version + ":api"
     runtime "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version
-    deobfCompile 'mcp.mobius.waila:Waila:' + config.waila_version
+//    deobfCompile 'mcp.mobius.waila:Waila:' + config.waila_version
     deobfCompile 'info.amerifrance.guideapi:Guide-API:' + config.guide_api_version
 }
 
