--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -21,7 +21,7 @@ task crowdin(type: CrowdinDownload) {
     outputs.upToDateWhen { false }
     output = "build/crowdin.zip"
     projectId = 'vampirism'
-    extract = false // we wanna keep it as a zip. not extract it to a folder named "crowdin.zip"
+    extract = true
 
     // task auomatically skips if this is null
     if (project.hasProperty('CROWDIN_KEY'))
@@ -67,16 +67,29 @@ processResources {
     exclude '**/Thumbs.db'
 }
 
+task renameLanguageFiles(type: Copy){
+    mustRunAfter 'crowdin'
+    from crowdin.output
+    into 'build/translations_lowercase'
+    rename { String fileName ->
+        fileName.toLowerCase()
+    }
+}
+
 jar {
     //Keep the jar as clean as possible
     includeEmptyDirs = false
 
 
     dependsOn 'crowdin'
-    def translations = zipTree(crowdin.output).matching {
-        exclude "**/en_US.lang"
+    dependsOn 'renameLanguageFiles'
+    from{
+        fileTree('build/translations_lowercase').matching{
+            exclude "**/en_us.lang"
+        }
     }
-    from { crowdin.getDidWork() ? translations : null }
+
+
 
 
 
