Readded waila support

--- a/build.properties
+++ b/build.properties
@@ -8,6 +8,6 @@ minor_version=0
 
 #Dependencies/Optional Libraries
 jei_version=4.2.10.248
-#waila_version=1.7.0-B3_1.9.4
+waila_version=1.7.1_1.11.2
 guide_api_version=1.11-2.1.0-51
 
