Disabled sundamage for AbyssalCraft's darklands and BiomesOPlenty's Ominous Woods

--- a/build.properties
+++ b/build.properties
@@ -10,4 +10,5 @@ minor_version=0
 jei_version=4.2.10.248
 waila_version=1.7.1_1.11.2
 guide_api_version=1.11-2.1.0-51
-
+biomesoplenty_version=6.0.2.2157
+abyssalcraft_version=1.9.4-pre-2
