--- a/gradle/dev.gradle
+++ b/gradle/dev.gradle
@@ -1,18 +1,17 @@
-task deobfJar(type: Jar, dependsOn: 'classes') {
-    from(sourceSets.main.output)
-    extension = 'jar'
-    classifier = 'deobf'
-}
-
 task apiJar(type: Jar, dependsOn: 'classes') {
-    from sourceSets.main.allSource
-    from sourceSets.main.output
-    include 'de/teamlapen/vampirism/api/**/*'
     classifier 'api'
+
+    from sourceSets.api.output
+
+    // TODO: when FG bug is fixed, remove allJava from the api jar.
+    // https://github.com/MinecraftForge/ForgeGradle/issues/369
+    // Gradle should be able to pull them from the -sources jar.
+    from sourceSets.api.allJava
 }
 
 task sourcesJar(type: Jar) {
     from sourceSets.main.allJava
+    from sourceSets.api.allJava
     classifier = 'sources'
 }
 
