--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -1,8 +1,8 @@
 repositories {
-    //maven {
-    //    name "Mobius Repo"
-    //    url "http://mobiusstrip.eu/maven"
-    //}
+    maven {
+        name "Mobius Repo"
+        url "http://mobiusstrip.eu/maven"
+    }
     maven { url 'http://tehnut.info/maven/' }
     maven { url 'http://chickenbones.net/maven' }
     maven {
@@ -40,8 +40,9 @@ task crowdin(type: CrowdinDownload) {
 dependencies {
     deobfCompile "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version + ":api"
     runtime "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version
-    //deobfCompile 'mcp.mobius.waila:Waila:' + config.waila_version
-    deobfCompile 'Waila:Waila:1.7.1_1.11.2'
+    deobfCompile 'mcp.mobius.waila:Waila:' + config.waila_version
+    //deobfCompile 'Waila:Waila:1.7.1_1.11.2' //Backup Waila on curseforge
+
     deobfCompile 'info.amerifrance.guideapi:Guide-API:' + config.guide_api_version
 
     deobfCompile 'com.github.glitchfiend.biomesoplenty:BiomesOPlenty:'+config.minecraft_version+'-'+config.biomesoplenty_version+':api'
