--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,7 @@
 #29.07.14 17:00
 minecraft_version=1.11.2
 forge_version=13.20.0.2315
-mappings=snapshot_20161220
+mappings=stable_32
 main_version=1
 major_version=3
 minor_version=0
