--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -81,6 +81,8 @@ processResources {
         exclude '**/*.info'
     }
 
+    rename '(.+_at.cfg)', 'META-INF/$1'
+
     exclude '**/Thumbs.db'
 }
 
@@ -108,13 +110,8 @@ jar {
         }
     }
 
-
-
-
-
     manifest {
-        //attributes 'FMLCorePlugin': 'de.teamlapen.vampirism.coremod.VampirismFMLLoadingPlugin',
-        //        'FMLCorePluginContainsFMLMod': 'true'
+      attributes 'FMLAT':'vampirism_at.cfg'
     }
 
 }
