--- a/src/main/resources/vampirism_at.cfg
+++ b/src/main/resources/vampirism_at.cfg
@@ -2,3 +2,4 @@ public net.minecraft.entity.player.EntityPlayer func_175139_a(Lnet/minecraft/uti
 public net.minecraft.util.FoodStats field_75126_c # foodExhaustionLevel
 public net.minecraft.entity.ai.EntityAIAttackMelee field_75438_g # entityPathEntity
 public net.minecraft.pathfinding.PathNavigateGround field_179694_f # shouldAvoidSun
+public net.minecraft.village.Village field_75586_a # world
