--- a/build.properties
+++ b/build.properties
@@ -1,14 +1,12 @@
 #29.07.14 17:00
-minecraft_version=1.11.2
-forge_version=13.20.0.2315
-mappings=stable_32
+minecraft_version=1.12
+forge_version=14.21.0.2347
+mappings=snapshot_20170623
 main_version=1
 major_version=3
 minor_version=0
 
 #Dependencies/Optional Libraries
-jei_version=4.2.10.248
+jei_version=4.6.0.58
+guide_api_version=1.12-2.1.2-53
 waila_version=1.7.1_1.11.2
-guide_api_version=1.11-2.1.0-51
-biomesoplenty_version=6.0.2.2157
-abyssalcraft_version=1.9.4-pre-2
