--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -40,16 +40,10 @@ task crowdin(type: CrowdinDownload) {
 dependencies {
     deobfCompile "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version + ":api"
     runtime "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version
-    deobfCompile 'mcp.mobius.waila:Waila:' + config.waila_version
+    //deobfCompile 'mcp.mobius.waila:Waila:' + config.waila_version
     //deobfCompile 'Waila:Waila:1.7.1_1.11.2' //Backup Waila on curseforge
-
     deobfCompile 'info.amerifrance.guideapi:Guide-API:' + config.guide_api_version
 
-    deobfCompile 'com.github.glitchfiend.biomesoplenty:BiomesOPlenty:'+config.minecraft_version+'-'+config.biomesoplenty_version+':api'
-    //runtime 'com.github.glitchfiend.biomesoplenty:BiomesOPlenty:'+config.minecraft_version+'-'+config.biomesoplenty_version+':universal'
-
-    deobfCompile 'com.shinoow.abyssalcraft:AbyssalCraft:'+config.minecraft_version+'-'+config.abyssalcraft_version+':api'
-    //runtime 'com.shinoow.abyssalcraft:AbyssalCraft:'+config.minecraft_version+'-'+config.abyssalcraft_version+':dev'
 
 }
 
