Fixed recipe for armor of swiftness, added mc 1.12.1 to curse upload

--- a/gradle/deploy.gradle
+++ b/gradle/deploy.gradle
@@ -21,6 +21,7 @@ curseforge {
             changelog = "This version should not be used in your 'productive' world. It contains the latest features, but also the latest bugs.\n Probably not all features are finished.\n To see what might have changed visit our Github page and browse the latest commits."
         }
         addGameVersion config.minecraft_version
+        addGameVersion "1.12.1" //TODO remove
 
         mainArtifact(jar) {
             displayName = "Vampirism-${config.minecraft_version}-${project.mod_version}"
