--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -39,7 +39,7 @@ task crowdin(type: CrowdinDownload) {
 
 dependencies {
     deobfCompile "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version + ":api"
-    runtime "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version
+    optionalRuntime "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version
     //deobfCompile 'mcp.mobius.waila:Waila:' + config.waila_version
     //deobfCompile 'Waila:Waila:1.7.1_1.11.2' //Backup Waila on curseforge
     deobfCompile 'info.amerifrance.guideapi:Guide-API:' + config.guide_api_version
