Updated Forge Updated Mappings Updated JEI Fixed important bug introduced by MCP. Thanks to @williewillus for pointing this out https://www.reddit.com/r/feedthebeast/comments/6yi8l0/psa_modders_axisalignedbb_method_renames_causing/

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,13 @@ buildscript {
 plugins {
     id 'com.matthewprenger.cursegradle' version '1.0.9'
 }
+
+
+configurations {
+    optionalRuntime
+    runtime.extendsFrom optionalRuntime // optionalRuntime dependencies are downloaded but not exported to POM
+}
+
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 loadProperties()
