--- a/gradle/forge.gradle
+++ b/gradle/forge.gradle
@@ -38,8 +38,8 @@ task crowdin(type: CrowdinDownload) {
 
 
 dependencies {
-    deobfCompile "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version + ":api"
-    optionalRuntime "mezz.jei:jei_" + config.minecraft_version + ":" + config.jei_version
+    deobfCompile "mezz.jei:jei_" + config.jei_version + ":api"
+    optionalRuntime "mezz.jei:jei_" +  config.jei_version
     //deobfCompile 'mcp.mobius.waila:Waila:' + config.waila_version
     //deobfCompile 'Waila:Waila:1.7.1_1.11.2' //Backup Waila on curseforge
     deobfCompile 'info.amerifrance.guideapi:Guide-API:' + config.guide_api_version
