Started working on #240

--- a/src/main/resources/vampirism_at.cfg
+++ b/src/main/resources/vampirism_at.cfg
@@ -3,3 +3,4 @@ public net.minecraft.util.FoodStats field_75126_c # foodExhaustionLevel
 public net.minecraft.entity.ai.EntityAIAttackMelee field_75438_g # entityPathEntity
 public net.minecraft.pathfinding.PathNavigateGround field_179694_f # shouldAvoidSun
 public net.minecraft.village.Village field_75586_a # world
+public net.minecraft.advancements.CriteriaTriggers func_192118_a(Lnet/minecraft/advancements/ICriterionTrigger;)Lnet/minecraft/advancements/ICriterionTrigger; # register
